# Li-Battery-Diffusion

./: .gitignore  0_Preprocessing.ipynb  0_Preprocessing.md  0_Preprocessing.py  1_Autoencoder.ipynb  1_Autoencoder.md  1_Autoencoder.py  2_Diffusion.ipynb  2_Diffusion.md  2_Diffusion.py  3_Generation.py  4_Experiment.ipynb  4_Experiment.md  4_Experiment.py  README.md  jupytext.toml  paths.py  pyproject.toml
helpers/: constants.py
